<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_element_dialog_sphere"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/add_element_dialog_sphere_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/color_line"
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:text="@string/set_name"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textColor="?attr/dialogText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402" />

        <EditText
            android:id="@+id/sphere_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="?attr/dialogText"
            android:maxLength="20"
            android:maxLines="1"
            android:textAlignment="center"/>


        <LinearLayout
            android:id="@+id/colorPickerPanel"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clrbtn1"
                android:tag="0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EF9A9A"
                android:layout_marginRight="5dp"
                android:text="" />
            <Button
                android:id="@+id/clrbtn5"
                android:tag="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFF59D"
                android:layout_marginRight="5dp"
                android:text="" />
            <Button
                android:id="@+id/clrbtn4"
                android:tag="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A5D6A7"
                android:layout_marginRight="5dp"
                android:text="" />
            <Button
                android:id="@+id/clrbtn3"
                android:tag="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#81D4FA"
                android:layout_marginRight="5dp"
                android:text="" />
            <Button
                android:id="@+id/clrbtn2"
                android:tag="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B39DDB"
                android:layout_marginRight="5dp"
                android:text="" />
            <Button
                android:id="@+id/clrbtn6"
                android:tag="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFAB91"
                android:layout_marginRight="5dp"
                android:text="" />

            <com.larje.taskmanager.customview.ColorPicker
                android:id="@+id/colorPicker"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="6"
                android:layout_marginHorizontal="5dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/clrbtn7"
                android:tag="open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:layout_marginRight="5dp"
                android:textColor="@color/darkThemeLevel1"
                android:textSize="16dp"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_weight="1"
                android:text="" />
            <Button
                android:id="@+id/cncl_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="?attr/dialogText"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="?attr/dialogText"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>